packages/svelte/tests/validator/samples/class-state-constructor-9/input.svelte.js
export class Counter {
	count = -1;

	constructor() {
		this.count = $state(0);
	}
}
