packages/svelte/tests/compiler-errors/samples/runes-export-named-state/main.svelte.js
export const x = $state(0);
export let y = $state(0);
y = 1;
